--- a/packages.config
+++ b/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Colorful.Console" version="1.2.9" targetFramework="net472" />
   <package id="Goblinfactory.ProgressBar" version="0.4.0" targetFramework="net472" />
+  <package id="Leaf.xNet" version="5.1.76" targetFramework="net472" />
 </packages>
