Block/Util: Introduce StringUtil
* The only method available actually allows you to generate string with predefined length and chars

--- a/Kotsh.csproj
+++ b/Kotsh.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Kotsh.cs" />
     <Compile Include="Modules\Block\Action\Request.cs" />
     <Compile Include="Modules\Block\Block.cs" />
+    <Compile Include="Modules\Block\Util\StringUtil.cs" />
     <Compile Include="Modules\Console\Console.cs" />
     <Compile Include="Modules\Console\Input.cs" />
     <Compile Include="Modules\Console\Level.cs" />
@@ -91,8 +92,6 @@
       <SubType>Component</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Modules\Block\Util\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
