--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Colorful.Console" version="1.2.9" targetFramework="net472" />
+  <package id="Costura.Fody" version="4.0.0" targetFramework="net472" />
+  <package id="Fody" version="5.0.0" targetFramework="net472" developmentDependency="true" />
   <package id="Goblinfactory.ProgressBar" version="0.4.0" targetFramework="net472" />
   <package id="Leaf.xNet" version="5.1.76" targetFramework="net472" />
 </packages>
