--- a/packages.config
+++ b/packages.config
@@ -5,4 +5,5 @@
   <package id="Fody" version="5.0.0" targetFramework="net472" developmentDependency="true" />
   <package id="Goblinfactory.ProgressBar" version="0.4.0" targetFramework="net472" />
   <package id="Leaf.xNet" version="5.1.76" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
 </packages>
