Kotsh: Introduce Statistics
* These classes fix few problems, such as: converting into string when using NameValueCollection, allows using strict type instead of string, etc...
* Also, remaining should be fixed
* And I added RPM = Run Per Minute, which includes bans and retries

--- a/Kotsh.csproj
+++ b/Kotsh.csproj
@@ -84,6 +84,8 @@
     <Compile Include="Blocks\Util\Source.cs" />
     <Compile Include="Blocks\Util\StringUtil.cs" />
     <Compile Include="Models\ContentType.cs" />
+    <Compile Include="Statistics\ProgramStatistics.cs" />
+    <Compile Include="Statistics\RunStatistics.cs" />
     <Compile Include="Window\Console.cs" />
     <Compile Include="Window\Input.cs" />
     <Compile Include="Models\Level.cs" />
