--- a/Kotsh.csproj
+++ b/Kotsh.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Blocks\Util\Dictionary.cs" />
     <Compile Include="Kotsh.cs" />
     <Compile Include="Blocks\Action\Parse.cs" />
     <Compile Include="Blocks\Action\Request.cs" />
