Block: Introduce KeyCheck
* An easy way to check if request worked correctly.
* This actually checks only the source code

--- a/Kotsh.csproj
+++ b/Kotsh.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Blocks\Action\KeyCheck.cs" />
     <Compile Include="Blocks\Util\Dictionary.cs" />
     <Compile Include="Instance\ProxyController.cs" />
     <Compile Include="Kotsh.cs" />
